--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.2",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
+    "multer": "^1.4.2",
     "pug": "^3.0.2"
   }
 }
