--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.1.2"
   }
 }
